navBar and background

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>Document</title>
+     <link rel="stylesheet" type="text/css" href="css/index.css">
  </head>
  <body>
-    aaaa
+     <div id="navBar">
+         <img class="logo" src="imgs/logo.png" alt="">
+         <img class="zhiku" src="imgs/zhiku.png" alt="">
+     </div>
+    
  </body>
  </html>   
