--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div>
             <a href="#"> 关于我们 </a>|<a href="#"> 联系方式 </a>|<a href="#"> 微博微信 </a>|<a href="#"> 意见反馈 </a>
         </div>
-        <div class="small-font">©鸡棚智库 2017-2018 zhiku.sdu.edu.cn 鲁ICP备17010203</div>
+        <div class="small-font">©吉鹏智库 2017-2018 zhiku.sdu.edu.cn 鲁ICP备17010203</div>
     </div>
     
  </body>
