--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <title>吉鹏智库</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">       
     <link rel="stylesheet" type="text/css" href="css/index.css">
-     
+     <script src="js/jquery-1.12.3.min.js"></script>
+     <script src="js/bootstrap.min.js"></script>
  </head>
  <body>
      <div id="navBar">
