--- a/index.html
+++ b/index.html
@@ -9,45 +9,248 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
      <script src="js/jquery-1.12.3.min.js"></script>
      <script src="js/bootstrap.min.js"></script>
+
  </head>
  <body>
-     <div id="navBar">
-         <div class="brand">
-            <img class="logo" src="imgs/logo.png" alt="">
-            <img class="zhiku" src="imgs/zhiku.png" alt="">
-         </div>
-         
-         <div class="account">
-            账户信息
-         </div>
-     </div>
+     <nav class="navbar navbar-default navbar-fixed-top" id="navBar">
+         <div class="container-fluid">
+             <!-- Brand and toggle get grouped for better mobile display -->
+             <div class="navbar-header nav-img">
+                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                     <span class="sr-only">Toggle navigation</span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                 </button>
 
-     <div class="big-box container">
-        <div class="big-font">
-            Share Your Resources
-        </div>
-        <div class="big-text">
-            分享资料资料资料资料资料公告公告公告公告分享资料资料资料资料资料公告公告公告公告
-        </div>
-     </div>
 
-      <div class="container box-col">
-        <div class="three-box">
-            校内资源
+             </div>
+             <a class="brand" href="#">
+                 <img alt="Brand" src="imgs/logo.png" style="width: 3rem;height: 3rem;">
+             </a>
+             <!-- Collect the nav links, forms, and other content for toggling -->
+             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                 <ul class="nav navbar-nav">
+                     <li class="active"><a href="#">主页 <span class="sr-only">(current)</span></a></li>
+                     <li><a href="#">资源检索</a></li>
+                     <li><a href="#">动态</a></li>
+                     <li><a href="#">智库原创</a></li>
+                     <li><a href="#">团队建设</a></li>
+                     <li><a href="#" data-toggle="modal" data-target="#myModal">意见反馈</a></li>
+                     <li><a href="#">登录</a></li>
+                     <li><a href="#">课内资源</a></li>
+                     <li><a href="#">课外资源</a></li>
+                     <li><a href="#">成员介绍</a></li>
+                     <li><a href="#">关注我们</a></li>
+
+                 </ul>
+
+
+             </div><!-- /.navbar-collapse -->
+         </div><!-- /.container-fluid -->
+     </nav>
+    <div class="" id="index">
+        <div class="big-box container">
+            <div class="big-font">
+                让知识回归平凡
+            </div>
+            <div class="big-text">
+                山东大学软件学院学术资源共享平台
+            </div>
+            <div class="search">
+                资源搜索
+            </div>
         </div>
-        <div class="three-box">
-            校外资源
-        </div>
-        <div class="three-box">
-            博客论坛
-        </div>
-     </div> 
-    <div class="footer">
-        <div>
-            <a href="#"> 关于我们 </a>|<a href="#"> 联系方式 </a>|<a href="#"> 微博微信 </a>|<a href="#"> 意见反馈 </a>
-        </div>
-        <div class="small-font">©吉鹏智库 2017-2018 zhiku.sdu.edu.cn 鲁ICP备17010203</div>
     </div>
+     <div id="inner">
+         <div class="wrap">
+             <div class="container" >
+                 <div class="title"><div class="line"></div> 资源检索 <div class="line"></div></div>
+                 <div class="row" style="text-align: center">
+                     <div class="col-sm-6 col-xs-12" >
+                         <div class="box-item">
+                             <h3>课内资源模块</h3>
+                             <div class="btn btn-primary entry-btn" onclick="navToResource(1)">进入</div>
+                         </div>
+                     </div>
+                     <div class="col-sm-6 col-xs-12">
+                         <div class="box-item">
+                             <h3>课外资源模块</h3>
+                             <div class="btn btn-primary entry-btn" onclick="navToResource(2)">进入</div>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
+         <div class="wrap">
+             <div class="container" >
+                 <div class="title"><div class="line"></div> 智库原创 <div class="line"></div></div>
+                 <div class="small-tag">软件人自己编写的知识见解</div>
+                 <div class="row" style="text-align: center">
+                     <div class="col-sm-4 col-xs-6" >
+                         <div class="or-item">
+                             <h3>数据结构</h3>
+                             <div class="btn btn-primary entry-btn">下载</div>
+                         </div>
+                     </div>
+                     <div class="col-sm-4 col-xs-6">
+                         <div class="or-item">
+                             <h3>离散数学</h3>
+                             <div class="btn btn-primary entry-btn">下载</div>
+                         </div>
+                     </div>
+                     <div class="col-sm-4 col-xs-6">
+                         <div class="or-item">
+                             <h3>离散数学</h3>
+                             <div class="btn btn-primary entry-btn">下载</div>
+                         </div>
+                     </div>
+                     <div class="col-sm-4 col-xs-6">
+                         <div class="or-item">
+                             <h3>离散数学</h3>
+                             <div class="btn btn-primary entry-btn">下载</div>
+                         </div>
+                     </div>
+                     <div class="col-sm-4 col-xs-6">
+                         <div class="or-item">
+                             <h3>离散数学</h3>
+                             <div class="btn btn-primary entry-btn">下载</div>
+                         </div>
+                     </div>
+
+                 </div>
+             </div>
+         </div>
+         <div class="wrap">
+             <div class="container" id="activity">
+                 <div class="title"><div class="line"></div> 动态 <div class="line"></div></div>
+                 <div class="small-tag">记录我们的点点滴滴</div>
+                 <div class="row row-line">
+                     <div class="col-xs-12 col-sm-6" >
+                        <h3>Python101 线下女性编程活动</h3>
+                         <small class="that-blue">2017年8月6日</small>
+                     </div>
+                     <div class="col-xs-12 col-sm-6">
+                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                     </div>
+                 </div>
+                 <div class="row row-line">
+                     <div class="col-xs-12 col-sm-6" >
+                         <h3>Python101 线下女性编程活动</h3>
+                         <small class="that-blue">2017年8月6日</small>
+                     </div>
+                     <div class="col-xs-12 col-sm-6">
+                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                     </div>
+                 </div>
+
+             </div>
+         </div>
+         <div class="wrap">
+             <div class="container" id="group">
+                 <div class="title"><div class="line"></div> 团队建设 <div class="line"></div></div>
+
+                 <div class="row row-line" >
+                     <div class="col-sm-1"></div><div class="col-sm-1"></div>
+                     <div class="col-xs-12 col-sm-3">
+                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                     </div>
+                     <div class="col-xs-12 col-sm-6" >
+                         <h3>组织概况</h3>
+                         <small class="that-blue"> We spare no expense to make sure everything runs smoothly.</small>
+                     </div>
+
+                 </div>
+                 <div class="row row-line">
+                     <div class="col-sm-1"></div>
+                     <div class="col-sm-1"></div>
+                     <div class="col-xs-12 col-sm-3">
+                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                     </div>
+                     <div class="col-xs-12 col-sm-6" >
+                         <h3>成员介绍</h3>
+                         <small class="that-blue"> We spare no expense to make sure everything runs smoothly.</small>
+                     </div>
+                 </div>
+                 <div class="row row-line">
+                     <div class="col-sm-1"></div>
+                     <div class="col-sm-1"></div>
+                     <div class="col-xs-12 col-sm-3">
+                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                     </div>
+                     <div class="col-xs-12 col-sm-6" >
+                         <h3>关注我们</h3>
+                         <small class="that-blue"> We spare no expense to make sure everything runs smoothly.</small>
+                     </div>
+                 </div>
+
+             </div>
+         </div>
+         <div class="wrap">
+             <div class="container" >
+                 <div class="title"><div class="line"></div> 关于我们 <div class="line"></div></div>
+                 <div class="row" style="text-align: center">
+                     <div class="col-sm-4 col-xs-6" >
+                         <img class="icon-img" src="imgs/email-icon.png" alt="">
+                         <div>邮箱</div>
+                         <div>JP_idea@163.com</div>
+                     </div>
+                     <div class="col-sm-4 col-xs-6">
+                         <img class="icon-img" src="imgs/wechat-icon.png" alt="">
+                         <div>微信公众平台</div>
+                         <div>吉鹏智库</div>
+                     </div>
+                     <div class="col-sm-4 col-xs-12">
+                         <img class="icon-img" src="imgs/qq-icon.png" alt="">
+                         <div>QQ</div>
+                     </div>
+                 </div>
+                 <h6 style="margin-top: 5vh">© 吉鹏智库2017</h6>
+             </div>
+         </div>
+
+     </div>
+
+
+
+
+
+     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+         <div class="modal-dialog" role="document">
+             <div class="modal-content">
+                 <div class="modal-header">
+                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                     <h4 class="modal-title" id="myModalLabel">意见反馈</h4>
+                 </div>
+                 <div class="modal-body">
+                     <div class="mb-inner">
+                         <div class="input-group input-group-lg">
+                             <input type="text" class="form-control" placeholder="用户名" aria-describedby="sizing-addon1">
+                         </div>
+                         <div class="input-group input-group-lg">
+                             <input type="email" class="form-control" placeholder="邮箱" aria-describedby="sizing-addon1">
+                         </div>
+                         <textarea placeholder="意见反馈"></textarea>
+
+                     </div>
+
+                 </div>
+                 <div class="modal-footer" style="text-align: center">
+                     <button type="button" class="btn btn-primary">submit</button>
+                 </div>
+             </div>
+         </div>
+     </div>
     
  </body>
+ <script type="text/javascript">
+     var ch = window.innerHeight;
+//     console.log(ch);
+     var h =document.getElementById("navBar").clientHeight;
+//     console.log(h);
+     document.getElementById("index").style.height = ch-h+'px';
+    function navToResource(ind) {
+        window.location.href='resourse.html?ind='+ind;
+    }
+ </script>
  </html>   
