--- a/index.html
+++ b/index.html
@@ -58,70 +58,70 @@
             <div class="big-text">
                 山东大学软件学院学术资源共享平台
             </div>
-            <div class="search">
+            <div class="search" onclick="navToSR()">
                 资源搜索
             </div>
         </div>
     </div>
      <div id="inner">
-         <div class="wrap" id="resourse">
-             <div class="container" >
-                 <div class="title"><div class="line"></div> 资源检索 <div class="line"></div></div>
-                 <div class="row" style="text-align: center">
-                     <div class="col-sm-6 col-xs-12">
-                         <div class="box-item">
-                             <h3>课内资源模块</h3>
-                             <div class="btn btn-primary entry-btn" onclick="navToResource(1)">进入</div>
-                         </div>
-                     </div>
-                     <div class="col-sm-6 col-xs-12">
-                         <div class="box-item">
-                             <h3>课外资源模块</h3>
-                             <div class="btn btn-primary entry-btn" onclick="navToResource(2)">进入</div>
-                         </div>
-                     </div>
-                 </div>
-             </div>
-         </div>
-         <div class="wrap" id="origin">
-             <div class="container" >
-                 <div class="title"><div class="line"></div> 智库原创 <div class="line"></div></div>
-                 <div class="small-tag">软件人自己编写的知识见解</div>
-                 <div class="row" style="text-align: center">
-                     <div class="col-sm-4 col-xs-6" >
-                         <div class="or-item">
-                             <h3>数据结构</h3>
-                             <div class="btn btn-primary entry-btn">下载</div>
-                         </div>
-                     </div>
-                     <div class="col-sm-4 col-xs-6">
-                         <div class="or-item">
-                             <h3>离散数学</h3>
-                             <div class="btn btn-primary entry-btn">下载</div>
-                         </div>
-                     </div>
-                     <div class="col-sm-4 col-xs-6">
-                         <div class="or-item">
-                             <h3>离散数学</h3>
-                             <div class="btn btn-primary entry-btn">下载</div>
-                         </div>
-                     </div>
-                     <div class="col-sm-4 col-xs-6">
-                         <div class="or-item">
-                             <h3>离散数学</h3>
-                             <div class="btn btn-primary entry-btn">下载</div>
-                         </div>
-                     </div>
-                     <div class="col-sm-4 col-xs-6">
-                         <div class="or-item">
-                             <h3>离散数学</h3>
-                             <div class="btn btn-primary entry-btn">下载</div>
-                         </div>
-                     </div>
+         <!--<div class="wrap" id="resourse">-->
+             <!--<div class="container" >-->
+                 <!--<div class="title"><div class="line"></div> 资源检索 <div class="line"></div></div>-->
+                 <!--<div class="row" style="text-align: center">-->
+                     <!--<div class="col-sm-6 col-xs-12">-->
+                         <!--<div class="box-item">-->
+                             <!--<h3>课内资源模块</h3>-->
+                             <!--<div class="btn btn-primary entry-btn" onclick="navToResource(1)">进入</div>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="col-sm-6 col-xs-12">-->
+                         <!--<div class="box-item">-->
+                             <!--<h3>课外资源模块</h3>-->
+                             <!--<div class="btn btn-primary entry-btn" onclick="navToResource(2)">进入</div>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                 <!--</div>-->
+             <!--</div>-->
+         <!--</div>-->
+         <!--<div class="wrap" id="origin">-->
+             <!--<div class="container" >-->
+                 <!--<div class="title"><div class="line"></div> 智库原创 <div class="line"></div></div>-->
+                 <!--<div class="small-tag">软件人自己编写的知识见解</div>-->
+                 <!--<div class="row" style="text-align: center">-->
+                     <!--<div class="col-sm-4 col-xs-6" >-->
+                         <!--<div class="or-item">-->
+                             <!--<h3>数据结构</h3>-->
+                             <!--<div class="btn btn-primary entry-btn">下载</div>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="col-sm-4 col-xs-6">-->
+                         <!--<div class="or-item">-->
+                             <!--<h3>离散数学</h3>-->
+                             <!--<div class="btn btn-primary entry-btn">下载</div>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="col-sm-4 col-xs-6">-->
+                         <!--<div class="or-item">-->
+                             <!--<h3>离散数学</h3>-->
+                             <!--<div class="btn btn-primary entry-btn">下载</div>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="col-sm-4 col-xs-6">-->
+                         <!--<div class="or-item">-->
+                             <!--<h3>离散数学</h3>-->
+                             <!--<div class="btn btn-primary entry-btn">下载</div>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="col-sm-4 col-xs-6">-->
+                         <!--<div class="or-item">-->
+                             <!--<h3>离散数学</h3>-->
+                             <!--<div class="btn btn-primary entry-btn">下载</div>-->
+                         <!--</div>-->
+                     <!--</div>-->
 
-                 </div>
-             </div>
-         </div>
+                 <!--</div>-->
+             <!--</div>-->
+         <!--</div>-->
          <div class="wrap">
              <div class="container" id="activity">
                  <div class="title"><div class="line"></div> 动态 <div class="line"></div></div>
@@ -168,7 +168,7 @@
                      <div class="col-xs-12 col-sm-3">
                          <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
                      </div>
-                     <div class="col-xs-12 col-sm-6" >
+                     <div class="col-xs-12 col-sm-6" onclick="navTomember()">
                          <h3>成员介绍</h3>
                          <small class="that-blue"> We spare no expense to make sure everything runs smoothly.</small>
                      </div>
@@ -335,9 +335,12 @@
      var h =document.getElementById("navBar").clientHeight;
 //     console.log(h);
      document.getElementById("index").style.height = ch-h+'px';
-    function navToResource(ind) {
-        window.location.href='resourse.html?ind='+ind;
-    }
+    function navToSR() {
+         window.location.href='searchResourse.html';
+     }
+     function navTomember() {
+         window.location.href='member.html';
+     }
      $(function(){
          $(".ind").click(function(){
              $.scrollTo('#index',800);
