--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                  <ul class="nav navbar-nav">
                      <li class="ind"><a href="javascript:void(0)">主页 <span class="sr-only">(current)</span></a></li>
-                     <li class="resour"><a href="javascript:void(0)">资源检索</a></li>
+                     <li class="resour"><a href="javascript:navToSR()">资源检索</a></li>
                      <li class="act"><a href="javascript:void(0)">动态</a></li>
-                     <li class="orig"><a href="javascript:void(0)">智库原创</a></li>
+                     <li class="orig"><a href="javascript:navToSR()">智库原创</a></li>
                      <li class="grou"><a href="javascript:void(0)">团队建设</a></li>
                      <li><a href="#" data-toggle="modal" data-target="#myModal">意见反馈</a></li>
                      <li><a href="#"  data-toggle="modal" data-target="#login">登录/注册</a></li>
                      <!--<li><a href="#">课内资源</a></li>-->
                      <!--<li><a href="#">课外资源</a></li>-->
-                     <li><a href="member.html">成员介绍</a></li>
-                     <li class="about"><a href="javascript:void(0)">关注我们</a></li>
+                     <!--<li><a href="member.html">成员介绍</a></li>-->
+                     <li class="about"><a href="javascript:void(0)">关于我们</a></li>
 
                  </ul>
 
@@ -58,7 +58,7 @@
             <div class="big-text">
                 山东大学软件学院学术资源共享平台
             </div>
-            <div class="search" onclick="navToSR()">
+            <div class="search" onclick="navToSR()" title="点击搜索校内外学习资源">
                 资源搜索
             </div>
         </div>
@@ -132,7 +132,7 @@
                          <small class="that-blue">2017年8月6日</small>
                      </div>
                      <div class="col-xs-12 col-sm-6">
-                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                         <img src="imgs/133.jpg" alt="" style="width: 80%;height: auto;">
                      </div>
                  </div>
                  <div class="row row-line">
@@ -141,7 +141,7 @@
                          <small class="that-blue">2017年8月6日</small>
                      </div>
                      <div class="col-xs-12 col-sm-6">
-                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                         <img src="imgs/133.jpg" alt="" style="width: 80%;height: auto;">
                      </div>
                  </div>
 
@@ -168,22 +168,22 @@
                      <div class="col-xs-12 col-sm-3">
                          <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
                      </div>
-                     <div class="col-xs-12 col-sm-6" onclick="navTomember()">
+                     <div class="col-xs-12 col-sm-6" onclick="navTomember()" style="cursor: pointer">
                          <h3>成员介绍</h3>
                          <small class="that-blue"> We spare no expense to make sure everything runs smoothly.</small>
                      </div>
                  </div>
-                 <div class="row row-line">
-                     <div class="col-sm-1"></div>
-                     <div class="col-sm-1"></div>
-                     <div class="col-xs-12 col-sm-3">
-                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
-                     </div>
-                     <div class="col-xs-12 col-sm-6" >
-                         <h3>关注我们</h3>
-                         <small class="that-blue"> We spare no expense to make sure everything runs smoothly.</small>
-                     </div>
-                 </div>
+                 <!--<div class="row row-line">-->
+                     <!--<div class="col-sm-1"></div>-->
+                     <!--<div class="col-sm-1"></div>-->
+                     <!--<div class="col-xs-12 col-sm-3">-->
+                         <!--<img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">-->
+                     <!--</div>-->
+                     <!--<div class="col-xs-12 col-sm-6" >-->
+                         <!--<h3>关注我们</h3>-->
+                         <!--<small class="that-blue"> We spare no expense to make sure everything runs smoothly.</small>-->
+                     <!--</div>-->
+                 <!--</div>-->
 
              </div>
          </div>
