--- a/upload.html
+++ b/upload.html
@@ -111,8 +111,8 @@
     login();
     var dname = $('#dname').val();
     var module = $('#module .active').text().trim();
-    var docformat=1;
-    var fileformat = $('#fileformat').val();
+    // var docformat=1;
+    // var fileformat = ;
     var origion = $('#origion .active').text().trim();
     var teacher =$('#teacher').val();
     var filedesc =$('#filedesc').val();
